<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HighscoresActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/blackboard"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/highscores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/highscores"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modeName"
        android:layout_below="@id/highscores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="20sp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/settingsButtonHS"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:src="@drawable/settingsicon"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/newButtonHS"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:src="@drawable/newicon"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/table"
        android:layout_below="@id/modeName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp">

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="15dp"
                android:text="@string/place"
                android:textStyle="bold"/>
            <TextView
                android:gravity="center"
                android:layout_margin="15dp"
                android:text="@string/player"
                android:textStyle="bold"/>
            <TextView
                android:gravity="center"
                android:layout_margin="15dp"
                android:text="@string/word"
                android:textStyle="bold"/>
            <TextView
                android:gravity="center"
                android:layout_margin="15dp"
                android:text="@string/score"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/one"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player1"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word1"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score1"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/two"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player2"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word2"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score2"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/three"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player3"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word3"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score3"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/four"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player4"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word4"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score4"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/five"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player5"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word5"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score5"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/six"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player6"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word6"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score6"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/seven"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player7"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word7"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score7"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/eight"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player8"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word8"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score8"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/nine"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player9"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word9"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score9"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="center"
                android:layout_margin="5dp"
                android:text="@string/ten"/>
            <TextView
                android:gravity="center"
                android:id="@+id/player10"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/word10"
                android:layout_margin="5dp"/>
            <TextView
                android:gravity="center"
                android:id="@+id/score10"
                android:layout_margin="5dp"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/okButtonHS"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/table"
        android:layout_margin="10dp"
        android:onClick="onClickOkHighscores"
        android:text="@string/ok"
        android:visibility="gone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputNamePlayer"
        android:id="@+id/inputNamePlayer"
        android:layout_alignBottom="@id/okButtonHS"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toLeftOf="@id/okButtonHS"
        android:layout_toStartOf="@id/okButtonHS"
        android:visibility="gone"/>

</RelativeLayout>