<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SettingsActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/blackboard"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/settings"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/incorrectGuesses"
        android:layout_below="@id/settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/incorrectGuesses"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numIncGuess"
        android:layout_alignBottom="@id/incorrectGuesses"
        android:layout_toEndOf="@id/incorrectGuesses"
        android:layout_toRightOf="@id/incorrectGuesses"/>

    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar1"
        android:layout_below="@id/incorrectGuesses"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:max="25"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wordLength"
        android:layout_below="@id/seekbar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/wordLength"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numWordLength"
        android:layout_alignBottom="@id/wordLength"
        android:layout_toEndOf="@id/wordLength"
        android:layout_toRightOf="@id/wordLength"/>

    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/wordLength"
        android:layout_marginTop="10dp"
        android:id="@+id/seekbar2"
        android:max="14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/evilMode"
        android:layout_below="@id/seekbar2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/evilMode"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/evilSwitch"
        android:layout_below="@id/evilMode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/evilSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/okSettings"
            android:onClick="onClickOkSettings"
            android:text="@string/ok"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelSettings"
            android:onClick="onClickCancelSettings"
            android:text="@string/cancel"/>
    </LinearLayout>

</RelativeLayout>